# ClaudeBackup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  deploy.cmd  pyi-entry-cli.py  pyi-entry-gui.py  pyproject.toml
.github/workflows/: ci.yml
claude_backup/: __init__.py  change_detect.py  cli.py  config.py  core.py  git_ops.py  health.py  logger.py  paths.py  registry.py  system_integration.py
claude_backup/gui/: about_dialog.py  app.py  dialogs.py  file_history_dialog.py  health_dialog.py  i18n.py  icons.py  main_window.py  onboarding.py  progress_dialog.py  settings_dialog.py  theme.py  timeline_dialog.py  tray.py  widgets.py  workers.py
claude_backup/gui/assets/: __init__.py
docs/templates/: onboarding-wizard-template.md  usage-guide-template.md
installer/: ClaudeBackup.iss  version_info.txt
scripts/: build.ps1  deploy_admin.ps1  elevate_deploy.ps1  generate_icons.py  install-autostart.ps1  install-context-menu.ps1  install-task-scheduler.ps1  uninstall-autostart.ps1  uninstall-context-menu.ps1  uninstall-task-scheduler.ps1
tests/: conftest.py  test_change_detect.py  test_config.py  test_core.py  test_git_ops.py  test_paths.py  test_registry.py
