[project]
name = "claude-backup"
version = "0.2.0"
description = "三层 Git 备份桌面工具：Claude Stop hook + NAS 镜像 + GitHub release"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
claude-backup = "claude_backup.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude_backup*"]

[tool.setuptools.package-data]
"claude_backup.gui" = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
